--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -15,7 +15,7 @@ nav {
 }
 
 .nav-links {
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: flex-end;
     gap: 20px;
@@ -35,4 +35,10 @@ nav {
     border: 1px solid black;
     padding: 10px;
     font-weight: bold;
+}
+
+@media screen and (min-width: 800px) {
+    .nav-links {
+        display: flex;
+    }
 }
