--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   line-height: 1;
-  overflow: hidden;
+  overflow-x: hidden;
   max-width: 100%;
   box-sizing: border-box;
 }
@@ -14,4 +14,9 @@ ul {
 a {
   color: black;
   text-decoration: none;
+}
+
+button {
+  cursor: pointer;
+  border: none;
 }
