--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,15 +1,18 @@
 .header-container {
     background-color: #8e4dcb;
-    display: grid;
-    grid-template-columns: 1fr;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     gap: 30px;
-    padding: 50px;
+    padding: 30px 20px 0;
 }
 
 .header-content {
     padding: 10px;
     background-color: yellow;
     text-align: center;
+    max-width: 30rem;
 }
 
 .header-content h2 {
@@ -33,12 +36,13 @@
 
 .header-container img {
     width: 100%;
+    max-width: 30rem;
     background-color: blue;
 }
 
 @media screen and (min-width: 1000px) {
     .header-container {
-        grid-template-columns: 1fr 1fr;
+        flex-direction: row;
     }
 
     .header-content {
@@ -52,4 +56,8 @@
     .header-content p {
         font-size: 1.3em;
     }
+
+   /*  .header-container img {
+        width: 50%;
+    } */
 }
