--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  line-height: 1;
+  line-height: 1.5;
   overflow-x: hidden;
   max-width: 100%;
   box-sizing: border-box;
@@ -22,5 +22,12 @@ button {
 }
 
 .btn {
-  
+  border: none;
+  background-color: black;
+  color: white;
+  padding: 12px 35px;
+  border-radius: 40px;
+  font-size: 0.9em;
+  font-weight: bold;
+  text-transform: uppercase;
 }
