--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,46 +1,61 @@
 .header-container {
-    background-color: #8e4dcb;
+    background-color: #cba1f2;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: 30px;
-    padding: 30px 20px 0;
+    padding: 55px 10px;
 }
 
 .header-content {
     padding: 10px;
-    background-color: yellow;
     text-align: center;
     max-width: 30rem;
 }
 
 .header-content h2 {
-    font-size: 2em;
+    font-size: 2.6em;
+    line-height: 1.2;
+    margin-bottom: -2px;
 }
 
 .header-content p {
     font-size: 1.1em;
     line-height: 1.4;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 
 .header-content button {
     border: none;
     background-color: black;
     color: white;
-    padding: 15px 35px;
+    padding: 18px 40px;
     border-radius: 40px;
     font-size: 0.9em;
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-bottom: 20px;
 }
 
 .header-container img {
     width: 100%;
     max-width: 30rem;
-    background-color: blue;
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 768px) {
+    .header-content h2 {
+        font-size: 4em;
+    }
+
+    .header-container img {
+        max-width: 40rem;
+    }
+}
+
+
+
+@media screen and (min-width: 1366px) {
     .header-container {
         flex-direction: row;
     }
