--- a/src/components/Features/Features.css
+++ b/src/components/Features/Features.css
@@ -1,13 +1,18 @@
+.features-container {
+    background-color: #efeff9;
+    padding: 40px 0 70px;
+}
+
 .features-container > p {
     text-align: center;
     max-width: 90%;
+    font-size: 1.15em;
     margin: -50px auto 0;
-
 }
 
 .features-content > ul {
     display: flex;
-    justify-self: center;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
     max-width: 100%;
@@ -19,8 +24,29 @@
 
 .features-content > ul li {
     font-weight: bold;
+    cursor: pointer;
 }
 
 .active {
     color: red;
+}
+
+@media screen and (min-width: 1024px) {
+    .features-container > p {
+        max-width: 45rem;
+    }
+
+    .features-content > ul {
+        flex-direction: row;
+        gap: 0;
+    }
+
+    .features-content > ul li {
+        border-bottom: 2px solid black;
+        padding: 0 20px;
+    }
+
+    .active {
+        border-bottom-color: red !important;
+    }
 }
