--- a/src/components/Features/FeaturesCard/FeaturesCard.css
+++ b/src/components/Features/FeaturesCard/FeaturesCard.css
@@ -1,3 +1,13 @@
+.features-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 65rem;
+    margin: 0 auto;
+    gap: 1.5em;
+}
+
 .features-card img {
     width: 90%;
     display: block;
@@ -7,11 +17,12 @@
 
 .features-card-content {
     padding: 0 10px;
+    max-width: 33rem;
 }
 
 .features-card-content h5 {
     font-size: 1.6em;
-    margin-bottom: -5px;
+    margin: 5px 0 -5px;
 }
 
 .features-card-content ul {
@@ -27,4 +38,19 @@
 
 .features-card-content ul li span{
     color: black;
+}
+
+
+@media screen and (min-width: 1024px) {
+    .features-card {
+        flex-direction: row;
+        gap: 2em;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .features-card {
+        flex-direction: row;
+        gap: 3.3em;
+    }
 }
