--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -13,7 +17,6 @@ ul {
 
 a {
   color: black;
-  text-decoration: none;
 }
 
 button {
