style: fix styles of containers and Header styles

--- a/src/components/Detail/Detail.css
+++ b/src/components/Detail/Detail.css
@@ -25,11 +25,15 @@
 
 .detail-card ul li {
     color: red;
-    margin-bottom: 18px;
+    margin-bottom: 12px;
 }
 
-.detail-card ul li span{
+.detail-card ul li span {
     color: black;
+}
+
+.detail-card button {
+    margin-top: 12px;
 }
 
 .detail-container img {
