--- a/src/components/Features/Features.css
+++ b/src/components/Features/Features.css
@@ -1,6 +1,6 @@
 .features-container {
     background-color: #efeff9;
-    padding: 40px 0 70px;
+    padding: 3em 0 9em;
 }
 
 .features-container > p {
