--- a/src/components/Features/FeaturesCard/FeaturesCard.css
+++ b/src/components/Features/FeaturesCard/FeaturesCard.css
@@ -33,11 +33,15 @@
 
 .features-card-content ul li {
     color: red;
-    margin-bottom: 18px;
+    margin-bottom: 10px;
 }
 
 .features-card-content ul li span{
     color: black;
+}
+
+.features-card-content button {
+    margin-top: 12px;
 }
 
 
