--- a/src/components/Testimonials/Testimonials.css
+++ b/src/components/Testimonials/Testimonials.css
@@ -4,6 +4,16 @@
     margin: 0 auto;
 }
 
+.splide__arrow {
+    background-color: transparent !important;
+}
+
+.splide__arrow svg {
+    width: 3em !important;
+    height: 3em !important;
+    fill: #3f3e3e !important;
+}
+
 @media screen and (min-width: 1024px) {
     .testimonials-carousel {
         padding: 20px;
