--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,12 @@ button {
   border: none;
 }
 
+.container {
+  margin-top: 4.5em;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
 .btn {
   border: none;
   background-color: black;
