--- a/src/components/Testimonials/Testimonials.css
+++ b/src/components/Testimonials/Testimonials.css
@@ -1,7 +1,7 @@
 .testimonials-carousel {
     width: 100%;
-    max-width: 55rem;
-    margin: 0 auto;
+    max-width: 70rem;
+    margin: 0 auto 10em;
 }
 
 .splide__arrow {
