--- a/src/components/TitleSection/TitleSection.css
+++ b/src/components/TitleSection/TitleSection.css
@@ -8,7 +8,7 @@
 
 .section p {
     font-size: 0.8em;
-    color: #cba1f2;
+    color: #d8679e;
     font-weight: bold;
     text-transform: uppercase;
 }
