--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,6 @@
 .header-container {
-    background-color: #cba1f2;
+    background-color: #415681;
+    color: white;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -28,14 +29,21 @@
 
 .header-content button {
     border: none;
-    background-color: black;
-    color: white;
+    outline: 2px solid white;
+    background-color: white;
+    color: #415681;
     padding: 18px 40px;
     border-radius: 40px;
     font-size: 0.9em;
     text-transform: uppercase;
     font-weight: bold;
     margin-bottom: 20px;
+    transition: all 0.25s;
+}
+
+.header-content button:hover {
+    background-color: #415681;
+    color: white;
 }
 
 .header-container img {
