--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,9 +3,13 @@ nav {
     position: sticky;
     top: 0;
     right: 0;
-    background-color: #cba1f2;
+    background-color: #415681;
+    color: white;
     padding: 0 45px;
     z-index: 2;
+    -webkit-box-shadow: 3px 3px 10px 3px #06060638;
+    -moz-box-shadow: 3px 3px 10px 3px #06060638;
+    box-shadow: 3px 3px 10px 3px #06060638;
 }
 
 .nav-container {
@@ -36,17 +40,29 @@ nav {
 .nav-items li a {
     text-decoration: none;
     text-transform: uppercase;
+    transition: all 0.25s;
+    color: #d3d2d2;
+}
+
+.nav-items li a:hover {
+    color: white;
 }
 
 .nav-login {
     margin-left: 10px;
-    border: 2px solid black;
+    outline: 2px solid white;
     border-radius: 40px;
     padding: 5px 25px;
     font-weight: bold;
     background-color: transparent;
     text-transform: uppercase;
     font-size: 0.9em;
+    transition: all 0.25s;
+}
+
+.nav-login:hover {
+    background-color: white;
+    color: #415681;
 }
 
 .nav-container h1,
