--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,6 @@
 footer {
   background-color: #415681;
   height: 100%;
-  width: 100%;
   padding: 0 20px;
   color: white;
 }
@@ -18,6 +17,7 @@ footer {
   margin: 0 auto;
 }
 
+footer,
 .footer-info-item {
   width: 100%;
 }
@@ -76,10 +76,6 @@ footer > p {
 }
 
 @media screen and (min-width: 1200px) {
-  .footer-info-container {
-    flex-direction: row;
-  }
-
   footer {
     padding: 2em 15em;
   }
