--- a/src/components/Description/Description.css
+++ b/src/components/Description/Description.css
@@ -4,7 +4,6 @@
   justify-content: center;
   align-items: center;
   gap: 15px;
-  max-width: 100%;
   padding: 50px 0;
   margin-top: -30px;
 }
@@ -13,9 +12,10 @@
   max-width: 15rem;
 }
 
-.description-card img {
+.description-content,
+.description-card img  {
   max-width: 100%;
-}
+} 
 
 .description-card h5 {
   font-size: 1.3em;
