--- a/src/components/Features/FeaturesCard/FeaturesCard.css
+++ b/src/components/Features/FeaturesCard/FeaturesCard.css
@@ -4,15 +4,18 @@
   justify-content: center;
   align-items: center;
   max-width: 65rem;
-  margin: 0 auto;
   gap: 1.5em;
 }
 
 .features-card img {
   width: 100%;
   display: block;
-  margin: 0 auto;
   max-width: 30rem;
+}
+
+.features-card, 
+.features-card img {
+  margin: 0 auto;
 }
 
 .features-card-content {
@@ -52,7 +55,6 @@
 
 @media screen and (min-width: 1200px) {
   .features-card {
-    flex-direction: row;
     gap: 3.3em;
   }
 }
