--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,7 +1,5 @@
 .newsletter-container {
-  width: 100%;
   max-width: 67rem;
-  margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -25,7 +23,6 @@
   border: none;
   border: 1px solid #a1a1a1;
   border-radius: 15x;
-  width: 100%;
   height: 100%;
   outline: none;
   padding: 25px 0 10px 20px;
@@ -36,7 +33,7 @@
   position: absolute;
   left: 20px;
   top: 15px;
-  transition: all 0.3s;
+  transition: all 0.25s;
 }
 
 .input-email-container input:focus ~ label,
@@ -57,7 +54,16 @@
 
 .newsletter-container form button {
   display: block;
-  margin: 0 auto;
-  width: 100%;
   padding: 17px 0;
+}
+
+.newsletter-container form button,
+.newsletter-container, 
+.input-email-container input {
+  width: 100%;
+}
+
+.newsletter-container, 
+.newsletter-container form button {
+  margin: 0 auto;
 }
