--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,35 @@
   scroll-behavior: smooth;
 }
 
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #a4a4a4 #dedede;
+}
+
+/* Chrome, Edge and Safari */
+*::-webkit-scrollbar {
+  width: 12px;
+}
+*::-webkit-scrollbar-track {
+  border-radius: 0px;
+}
+
+*::-webkit-scrollbar-track *::-webkit-scrollbar-track:active,
+*::-webkit-scrollbar-track:hover {
+  background-color: #dedede;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+}
+
+*::-webkit-scrollbar-thumb,
+*::-webkit-scrollbar-thumb:hover,
+*::-webkit-scrollbar-thumb:active {
+  background-color: #a4a4a4;
+}
+
 body {
   margin: 0;
   padding: 0;
