style: change font, and add link in title

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -17,6 +17,10 @@ nav {
   margin: 0 auto;
 }
 
+.nav-title a {
+  text-decoration: none;
+}
+
 .nav-links {
   display: none;
   justify-content: flex-end;
